// Copyright (c) 2014, Google Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package fileproxy;

enum RollbackMessageType {
   SET_COUNTER = 1;
   GET_COUNTER = 2;
   SET_HASH = 3;
   GET_HASHED_VERIFIER = 4;
   ERROR = 5;
}  

// A RollbackMessage is a message sent like an RPC between fileproxy hosts and a
// rollback server. The data is sometimes simply data and is sometimes a
// serialized protobuf, depending on the message type.
message RollbackMessage {
  required RollbackMessageType type = 1;
  required bytes data = 2;
}

// A RollbackHash is a hash for a given item.
message RollbackHash {
  required string item = 1;
  required bytes hash = 2;
}

// A RollbackResponse is the value received from the rollback server in response
// to a RollbackMessage.
message RollbackResponse {
  required RollbackMessageType type = 1;
  required bytes data = 2;
}
